--- a/src/CleanEnergyHero.css
+++ b/src/CleanEnergyHero.css
@@ -424,6 +424,23 @@ object-fit: cover; /* Keeps the aspect ratio intact */
     flex: 1 1;
     max-width: 100%;
 }
+  .BaseButton_baseButton__gki38 {
+    align-items: center;
+    background-color: #0eff85;
+    background-color: var(--color-arcadiaGreen);
+    border-radius: .8rem;
+    color: #004037;
+    color: var(--color-lushGreen);
+    column-gap: .4rem;
+    display: inline-flex
+;
+    font-size: 1rem;
+    font-weight: 700;
+    height: 3rem;
+    line-height: 1;
+    padding: 0 1.6rem;
+    white-space: nowrap;
+}
 }
 
 
