--- a/src/Asection7.css
+++ b/src/Asection7.css
@@ -333,7 +333,7 @@
       text-align: center; 
       color: #fff; 
       background-size: 200% 200%; 
-      background-image: linear-gradient(90deg,#e9b59a,#e5a685,#d39474,#e9b59a,#e9b59a); 
+       background-image: linear-gradient(90deg,#929292,#929292,#6b6b6b,#6b6b6b,#6b6b6b);  
       background-position: 0;
   } 
   
