--- a/src/Homedoctor.css
+++ b/src/Homedoctor.css
@@ -1,12 +1,3 @@
-  @font-face { 
-    font-family:SofiaProWeb;
-    font-weight:700;
-    src:url("https://www.hims.com/css/fonts/SofiaProBold-english.woff2") format("woff2"), url("https://www.hims.com/css/fonts/SofiaProBold-english.woff") format("woff"), url("https://www.hims.com/css/fonts/SofiaProBold.otf") format("opentype");
-    font-style:normal;
-    font-display:swap;
-    unicode-range:U+0000-00A0, U+00A2-00A9, U+00AC-00AE, U+00B0-00B7, U+00B9-00BA, U+00BC-00BE, U+00D7, U+00F7, U+2000-206F, U+2074, U+20AC, U+2122, U+2190-21BB, U+2212, U+2215, U+F8FF, U+FEFF, U+FFFD;
-  } 
-   
 
   @media (min-width: 360px){ 
     :root { 
@@ -89,7 +80,7 @@
   }     
   
   .gkoHKP *  { 
-      line-height: 1;
+      line-height: 0.7;
   } 
   
   .gkoHKP > :nth-child(2) { 
@@ -134,7 +125,7 @@
       --max-viewport-size: calc(1392 - 360); 
       margin: 0px; 
       padding: 0px; 
-      font-family: sofia-pro, SofiaProWeb, Helvetica, Arial, sans-serif; 
+     
       font-style: normal; 
       color: inherit; 
       font-weight: 500; 
@@ -189,7 +180,7 @@
       --max-viewport-size: calc(1392 - 360); 
       margin: 0px; 
       padding: 0px; 
-      font-family: sofia-pro, SofiaProWeb, Helvetica, Arial, sans-serif; 
+     
       font-style: normal; 
       color: inherit; 
       font-weight: 400; 
@@ -335,7 +326,7 @@
       --max-viewport-size: calc(1392 - 360); 
       margin: 0px; 
       padding: 0px; 
-      font-family: sofia-pro, SofiaProWeb, Helvetica, Arial, sans-serif; 
+     
       font-style: normal; 
       color: inherit; 
       font-weight: 400; 
@@ -485,7 +476,7 @@
       --max-viewport-size: calc(1392 - 360); 
       margin: 0px; 
       padding: 0px; 
-      font-family: sofia-pro, SofiaProWeb, Helvetica, Arial, sans-serif; 
+     
       font-style: normal; 
       color: inherit; 
       font-weight: 400; 
@@ -1039,7 +1030,7 @@ a {
     --max-viewport-size: calc(1392 - 360); 
     margin: 0px; 
     padding: 0px; 
-    font-family: sofia-pro, SofiaProWeb, Helvetica, Arial, sans-serif; 
+   
     font-style: normal; 
     font-weight: 500; 
     line-height: 1.125; 
@@ -1220,7 +1211,7 @@ img {
     --max-viewport-size: calc(1392 - 360); 
     margin: 0px; 
     padding: 0px; 
-    font-family: sofia-pro, SofiaProWeb, Helvetica, Arial, sans-serif; 
+   
     font-style: normal; 
     font-weight: 500; 
     line-height: 1.15; 
@@ -1404,8 +1395,8 @@ img {
 
 .jGXlEb h3  { 
     font-size: 0.875rem; 
-    letter-spacing: -0.035625rem; 
-    margin: 0px;
+    /* letter-spacing: -0.035625rem; 
+    margin: 0px; */
 } 
 
 .gMpdZr { 
