--- a/src/index.css
+++ b/src/index.css
@@ -1005,3 +1005,29 @@ background: rgba(245, 240, 234, 0.41)
     scroll-behavior: smooth;
   }
 
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: scale(0.8) translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .blocks {
+    animation: appear 2s ease-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .blocks {
+    animation: appear 1s ease-in-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 20%;
+  }
+}
