--- a/src/Homedoctor.css
+++ b/src/Homedoctor.css
@@ -307,7 +307,8 @@
   } 
   
   .jFQpTd span  { 
-      height: 100%;  
+      height: 100%; 
+      aspect-ratio: 1312 / 800; 
       left: 50%; 
       transform: translateX(-50%); 
       display: flex;
@@ -565,7 +566,7 @@
     /* Ensure images don't overflow */
     .jFQpTd {
       position: relative;
-      
+      overflow: hidden;
     }
     
     /* Improve content spacing on mobile */
