--- a/src/Asection7.css
+++ b/src/Asection7.css
@@ -439,7 +439,7 @@
       font-size: 24px; 
       line-height: 100%; 
       text-transform: uppercase; 
-      color: "#f9f9f9; 
+      color: "#f9f9f9"; 
       margin-bottom: 24px;
   } 
   
