--- a/src/Homedoctor.css
+++ b/src/Homedoctor.css
@@ -611,7 +611,7 @@
 
 
   .cAruRV.dOQfTS {
-    background-color: #233f8f;
+    background-color: #33cccc;
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 24px;
@@ -1394,7 +1394,7 @@ img {
 } 
 
 .jGXlEb h3  { 
-    font-size: 0.875rem; 
+    font-size: 1.01rem; 
     /* letter-spacing: -0.035625rem; 
     margin: 0px; */
 } 
