--- a/src/HeroSection.css
+++ b/src/HeroSection.css
@@ -46,7 +46,7 @@
 }     
 
 .Block_isCream__VRtaM { 
-    background-color: var(--color-cream); 
+    background-color: #f9f9f9; 
     color: var(--color-lushGreen);
 } 
 
