--- a/src/AwCard.css
+++ b/src/AwCard.css
@@ -209,7 +209,7 @@
   } 
 
   .IconCard_container__yA35h.IconCard_isCream__DM_79:hover { 
-    background-color: #33cccc;
+    background-color: #acaaaa;
   } 
 }     
 
