--- a/src/AwCard2.css
+++ b/src/AwCard2.css
@@ -158,7 +158,7 @@
 @media (hover: hover){ 
   .IconCard_container__yA35h:hover { 
     box-shadow: var(--dropShadow); 
-    background-color: #33cccc;
+    background-color: #acaaaa;
   } 
 }     
 
